--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@types/react-router-dom": "5.3.2",
     "axios": "^0.24.0",
     "bootstrap": "5.1.3",
+    "date-fns": "^2.28.0",
+    "jwt-decode": "^3.1.2",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.0",
     "react-dom": "^17.0.2",
